[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kausal-paths"
requires-python = ">= 3.13"
dynamic = ["version"]

[tool.pip-tools]

[tool.pep8]
max-line-length = "120"
ignore = "E309"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "paths.tests.settings"
norecursedirs = ["node_modules", "data", ".git", "venv", "Attic"]
filterwarnings = ["ignore::DeprecationWarning:graphene"]

[tool.ruff]
extend = './kausal_common/configs/ruff.toml'

[tool.mypy]
plugins = [
  "mypy_django_plugin.main",
  "numpy.typing.mypy_plugin",
  "pydantic.mypy",
  "strawberry.ext.mypy_plugin"
]
mypy_path = "$MYPY_CONFIG_FILE_DIR/kausal_common/typings"
exclude = ['^Attic/', '/migrations/', '^local_settings\.py', '^\.*env*']
check_untyped_defs = true
sqlite_cache = true
cache_fine_grained = true
explicit_package_bases = true
strict_optional = true
always_true = ['IS_PATHS']
always_false = ['IS_WATCH']


[[tool.mypy.overrides]]
module = [
  "colored.*",
  "dvc_pandas.*",
  "factory.*",
  "pint.*",
  "pint_pandas.*",
  "oauth2_provider.*",
  "modelcluster.*",
  "modeltrans.*",
  "wagtail.*",
  "networkx.*",
  "plotext.*",
  "graphene_django.*",
  "grapple.*",
  "generic_chooser.*",
  "nanoid.*",
  "social_core.*",
  "social_django.*",
  "plotly.*",
  "rest_framework_nested.*",
  "environ.*",
  "wagtail_color_panel.*",
  "polars.polars.*",
  "gunicorn.*",
  "uwsgi.*",
  "uwsgidecorators.*",
  "psutil.*",
  "gunicorn.*",
  "environ.*",
  "dvc.*",
  "appdirs.*",
  "wagtail_localize.*",
  "laces.*",
  "taggit.*",
  "permissionedforms.*",
  "diffsync.*",
]
ignore_missing_imports = true

[tool.mypy-baseline]
baseline_path = ".mypy-baseline.txt"
preserve_position = true

[tool.pydantic-mypy]
init_typed = true

[tool.pyright]
stubPath = "./kausal_common/typings"
exclude = [
  'Attic/',
  '**/__pycache__',
  'local_settings.py',
  '**/migrations',
  '**/node_modules',
  '.*',
]
deprecateTypingAliases = true
reportAttributeAccessIssue = "warning"
reportUnsafeMultipleInheritance = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnannotatedClassAttribute = false
reportIgnoreCommentWithoutRule = false
reportUnusedImport = false
enableTypeIgnoreComments = true
reportUnnecessaryTypeIgnoreComment = false
reportUnusedCallResult = false
reportImplicitOverride = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportUninitializedInstanceVariable = false
reportIncompatibleMethodOverride = false
reportMissingSuperCall = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
reportImplicitStringConcatenation = false
reportUnusedParameter = false
reportAny = false
defineConstant = { 'IS_PATHS' = true, 'IS_WATCH' = false }

[tool.django-stubs]
django_settings_module = "paths.settings"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
  "kausal_common/requirements-common.txt",
] }
optional-dependencies.dev = { file = [
  "requirements-dev.txt",
  "requirements-lint.txt",
] }
optional-dependencies.lint = { file = ["requirements-lint.txt"] }
optional-dependencies.prod = { file = ["requirements-prod.txt"] }
