[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61.2" ]

[project]
name = "kausal-paths"
version = "1.0.0"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "asgi-cors",
  "babel",
  "celery",
  "channels",
  "channels-redis",
  "colored",
  "colormath",
  "dal-admin-filters>=1.1",
  "deepdiff>=8.6.1",
  "diffsync",
  "django",
  "django-anymail[mailgun,mailjet,sendgrid]",
  "django-autocomplete-light>=3.12.1",
  "django-celery-results",
  "django-cors-headers",
  "django-environ",
  "django-extensions",
  "django-image-cropping>=1.7",
  "django-modeltrans",
  "django-oauth-toolkit",
  "django-pydantic-field",
  "django-storages",
  "django-stubs-ext",
  "djangorestframework",
  "drf-nested-routers",
  "drf-spectacular",
  "dvc-pandas",
  "easy-thumbnails>=2.10",
  "factory-boy",
  "gql[requests]",
  "graphene-django",
  "graphene-django-optimizer",
  "graphene-pydantic",
  "graphql-core",
  "graphql-relay",
  "ipython",
  "llvmlite",
  "logfmter",
  "loguru",
  "modelsearch<1.2",
  "nanoid==2",
  "numba",
  "openpyxl",
  "opentelemetry-exporter-otlp-proto-http",
  "opentelemetry-exporter-prometheus>=0.55b1",
  "opentelemetry-instrumentation-django",
  "opentelemetry-instrumentation-psycopg",
  "opentelemetry-instrumentation-redis",
  "opentelemetry-instrumentation-threading",
  "opentelemetry-sdk",
  "orjson",
  "pandas",
  "pint",
  "pint-pandas",
  "polars",
  "psycopg[binary,pool]",
  "pycryptodome",
  "pydantic",
  "pydantic-extra-types",
  "pygithub",
  "pygments-graphql",
  "pytest-cov",
  "pytest-django",
  "pytest-factoryboy",
  "pytest-html",
  "python-dotenv",
  "redis",
  "rich",
  "ruamel-yaml",
  "s3cmd",
  "sentry-sdk[django,opentelemetry]",
  "social-auth-app-django",
  "starlette>=0.51",
  "strawberry-graphql",
  "strawberry-graphql-django",
  "tzdata",
  "uuid-utils",
  "uvicorn[standard]",
  "wagtail>=7.3",
  "wagtail-color-panel",
  "wagtail-font-awesome-svg",
  "wagtail-generic-chooser",
  "wagtail-grapple",
  "wagtail-localize",
  "wagtail-modeladmin>=2.2",
  "wagtailgeowidget>=8.2.1",
  "watchfiles",
  "willow>=1.9",
  "xxhash",
]
optional-dependencies.kausal = [ "kausal-paths-extensions>=0.6.50" ]

[dependency-groups]
dev = [
  "basedpyright",
  "daphne",
  "debugpy>=1.8.15",
  "django-debug-toolbar",
  "inotify",
  "ipdb",
  "ipython",
  "libcst>=1.8.2",
  "line-profiler",
  "ondivi",
  "pdbr[ipython]",
  "pip",
  "plotext",
  "pre-commit",
  "uv",
  "virtualenvwrapper>=6.1.1",
  "viztracer",
  { include-group = "lint" },
]
lint = [
  "altair>=6",
  "celery-types",
  "django-stubs",
  "djangorestframework-stubs",
  "graphene-stubs",
  "mypy",
  "mypy-baseline",
  "pandas-stubs",
  "pyarrow-stubs",
  "ruff",
  "scipy-stubs>=1.16.2.4",
  "types-django-filter>=25.2.0.20251010",
  "types-factory-boy",
  "types-jwcrypto>=1.5.0.20251102",
  "types-networkx",
  "types-oauthlib",
  "types-openpyxl",
  "types-orjson",
  "types-pygit2",
  "types-requests>=2.32.4.20260107",
]
notebook = [
  "altair",
  "great-tables",
  "ipympl",
  "jupyterlab",
  "jupyterlab-lsp",
  "plotly",
  "pyright",
  "seaborn[stats]",
  "strawberry-graphql[cli]",
]
prod = [
  "gunicorn[gthread]",
  "rustface>=0.1; sys_platform=='linux'",
  "uvicorn-worker",
]

[tool.setuptools]
include-package-data = false
py-modules = []

[tool.uv]
sources.django-modeltrans = { url = "https://github.com/kausaltech/django-modeltrans/archive/a734040c3f38c2e404a61dc0be2c017874a9ea45.zip" }
sources.kausal-paths-extensions = { index = "kausal" }
index = [
  { url = "https://pypi.org/simple" },
  { name = "kausal", url = "https://pypi.kausal.tech/", authenticate = "always" }
]
environments = [
  "python_full_version >= '3.14' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "python_full_version >= '3.14' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
extend = "./kausal_common/configs/ruff.toml"
extend-exclude = [ "*.ipynb" ]

[tool.mypy]
plugins = [
  "mypy_django_plugin.main",
  "pydantic.mypy",
  "strawberry.ext.mypy_plugin",
]
mypy_path = "$MYPY_CONFIG_FILE_DIR/kausal_common/typings"
exclude = [
  "^Attic/",
  "/migrations/",
  "^notebooks/",
  "^local_settings\\.py",
  "^\\.*env*",
  "^kausal_common/typings/django-stubs",
]
check_untyped_defs = true
cache_fine_grained = true
explicit_package_bases = true
strict_optional = true
fixed_format_cache = true
always_true = [ "IS_PATHS", "IS_MYPY" ]
always_false = [ "IS_WATCH" ]

[[tool.mypy.overrides]]
module = [
  "anymail.*",
  "appdirs.*",
  "channels.*",
  "colored.*",
  "dal.*",
  "dal_select2.*",
  "diffsync.*",
  "dvc_pandas.*",
  "dvc.*",
  "environ.*",
  "environ.*",
  "factory.*",
  "generic_chooser.*",
  "graphene_django.*",
  "grapple.*",
  "gunicorn.*",
  "gunicorn.*",
  "ipdb.*",
  "laces.*",
  "modelcluster.*",
  "modeltrans.*",
  "modelsearch.*",
  "nanoid.*",
  "networkx.*",
  "numba.*",
  "oauth2_provider.*",
  "pdbr.*",
  "permissionedforms.*",
  "pint_pandas.*",
  "pint.*",
  "plotext.*",
  "plotly.*",
  "polars.polars.*",
  "psutil.*",
  "rest_framework_nested.*",
  "rustface.*",
  "social_core.*",
  "social_django.*",
  "storages.*",
  "taggit.*",
  "uwsgi.*",
  "uwsgidecorators.*",
  "wagtail_color_panel.*",
  "wagtail_localize.*",
  "wagtail.*",
  "willow.*",
  "wagtailgeowidget.*",
]
ignore_missing_imports = true

[tool.pyright]
# So Pyright resolves packages installed in .venv (Django, etc.).
venvPath = "."
venv = ".venv"
stubPath = "./kausal_common/typings"
exclude = [
  "Attic/",
  "**/__pycache__",
  "local_settings.py",
  "**/migrations",
  "**/node_modules",
  ".*",
]
defineConstant = { IS_PATHS = true, IS_WATCH = false, IS_MYPY = false }
deprecateTypingAliases = true
enableTypeIgnoreComments = true
reportAny = false
reportAttributeAccessIssue = "error"
reportConstantRedefinition = false
reportExplicitAny = false
reportIgnoreCommentWithoutRule = false
reportImplicitOverride = false
reportImportCycles = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportInvalidCast = false
reportMissingParameterType = false
reportMissingTypeStubs = "information"
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportUninitializedInstanceVariable = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryComparison = "information"
reportUnnecessaryIsInstance = false
reportUnreachable = false
reportUnsafeMultipleInheritance = "information"
reportUnusedCallResult = false

[tool.ty]
environment.extra-paths = [ "./kausal_common/typings" ]

[tool.django-stubs]
django_settings_module = "paths.settings"

[tool.pytest]
DJANGO_SETTINGS_MODULE = "paths.settings"
norecursedirs = [ "node_modules", "data", ".git", "venv", "Attic" ]
filterwarnings = [
  "ignore::DeprecationWarning:graphene",
  "ignore:.*iscoroutinefunction:DeprecationWarning",
]

[tool.pip-tools]

[tool.pep8]
max-line-length = "120"
ignore = "E309"

[tool.mypy-baseline]
baseline_path = ".mypy-baseline.txt"
preserve_position = false

[tool.pydantic-mypy]
init_typed = true
